--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,14 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+#product{
+  background-image: linear-gradient(rgb(248, 240, 241),rgb(31, 195, 236));
+  
+}
+
 .single-product {
+  
   padding: 10px;
   transition: 0.6s;
 }
@@ -45,10 +52,12 @@ body {
   border: 1px solid cyan;
 }
 .product-image {
+  
   width: 150px;
   height: 150px;
 }
 .cart {
+  background-image: linear-gradient(cyan,green);
   width: 350px;
   /* border: 1px solid green; */
   padding: 10px;
