--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   border: none;
   border-radius: 50px;
   padding: 5px;
-  outline: none;
+  outline: green;
 }
 .search-field:hover {
   outline: none;
