--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+/*
 .search-field {
   border: none;
   border-radius: 50px;
@@ -24,7 +25,7 @@ body {
   padding: 10px 50px;
   border-radius: 25px;
   margin-left: 20px;
-}
+}*/
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
